# hiviewdfx_hiview

./: .gitignore  1522.diff  1522.diff:Zone.Identifier  2437.diff  2437.diff:Zone.Identifier  BUILD.gn  CODEOWNERS  OAT.xml  README_SWITCH.md  bundle.json  hisysevent.yaml  hiview.gni  hiview_zh.md  hiviewdfx.yaml  kernel_vendor.yaml  main.cpp  ohos.build
adapter/service/: BUILD.gn  hiview_service_adapter.cpp
adapter/service/client/: BUILD.gn  IHiviewServiceAbility.idl  IRequestTraceCallback.idl  IRequestUiTreeCallback.idl
adapter/service/idl/: BUILD.gn
adapter/service/server/: BUILD.gn  IHiviewServiceAbility.idl
adapter/service/test/: BUILD.gn
adapter/service/zidl/: BUILD.gn
base/: BUILD.gn  app_caller_event.cpp  audit.cpp  dispatch_config.cpp  dispatch_rule_parser.cpp  domain_json_parser.cpp  event.cpp  event_dispatch_queue.cpp  event_dispatcher.cpp  event_json_parser.cpp  event_loop.cpp  event_source.cpp  hiview_global.cpp  hiview_xcollie_timer.cpp  libhiviewbase.map  logger.cpp  obj_sys_event.cpp  pipeline.cpp  plugin.cpp  plugin_factory.cpp  plugin_proxy.cpp  privacy_manager.cpp  sys_event.cpp  version_config_parser.cpp
base/event_export/: BUILD.gn  event_export_engine.cpp  setting_observer_manager.cpp
base/event_export/config/: BUILD.gn  export_config_manager.cpp  export_config_parser.cpp  export_event_list_parser.cpp
base/event_export/database/: export_db_manager.cpp
base/event_export/include/: event_export_engine.h  setting_observer_manager.h
base/event_export/seq_db/: BUILD.gn  export_db_manager.cpp
base/event_export/task/: export_base_task.cpp
base/event_export/test/: BUILD.gn
base/event_pool/: BUILD.gn  event_thread_pool.cpp  event_thread_pool.h
base/event_pool/test/: BUILD.gn
base/event_publish/: BUILD.gn  app_event_elapsed_time.cpp  app_event_handler.cpp  app_event_publish_unable.cpp  app_event_publisher_factory.cpp  event_publish.cpp  log_file_name_converter.cpp  user_data_size_reporter.cpp
base/event_publish/include/: app_event_elapsed_time.h  (+6 more)
base/event_raw/: BUILD.gn
base/event_report/: BUILD.gn  hiview_event_report.cpp
base/event_store/: BUILD.gn  query_status_log_util.cpp  sys_event_dao.cpp  sys_event_query.cpp  sys_event_query_wrapper.cpp
base/event_threshold/: BUILD.gn  event_threshold_manager.cpp  sys_event_user.cpp
base/include/: app_caller_event.h  audit.h  defines.h  dispatch_config.h  dispatch_rule_parser.h  domain_json_parser.h  event.h  event_dispatch_queue.h  event_dispatcher.h  event_json_parser.h  event_loop.h  event_priority_queue.h  hiview_global.h  hiview_logger.h  hiview_xcollie_timer.h  i_privacy_controller.h  logger.h  obj_sys_event.h  plugin.h  plugin_config.h  plugin_factory.h  plugin_proxy.h  privacy_manager.h  sys_event.h  version_config_parser.h
base/logstore/: BUILD.gn  log_file.cpp  log_store_ex.cpp
base/running_status_logger/: BUILD.gn  log_file_writer.cpp  period_file_operator.cpp  running_status_logger.cpp
base/sys_event_logger/: BUILD.gn  sys_event_logger.cpp
base/test/: BUILD.gn
base/utility/: BUILD.gn  ash_memory_utils.cpp  bundle_util.cpp  cjson_util.cpp  common_utils.cpp  ffrt_util.cpp  file_util.cpp  focused_event_util.cpp  freeze_json_util.cpp  hisysevent_util.cpp  hiview_config_util.cpp  hiview_db_util.cpp  hiview_zip_util.cpp  memory_util.cpp  parameter_ex.cpp  restorable_db_store.cpp  setting_observer_manager.cpp  socket_util.cpp  sql_util.cpp  string_util.cpp  thread_util.cpp  time_util.cpp  zip_util.cpp
core/: BUILD.gn  event_json_parser.cpp  event_server.cpp  event_server.h  flat_json_parser.cpp  hiview_platform.cpp  hiview_platform.h  monitor_config.cpp  monitor_config.h  platform_monitor.cpp  platform_monitor.h  plugin_bundle.cpp  plugin_bundle.h  plugin_config.cpp  sysevent_source.cpp  sysevent_source.h
core/bundle_config/: plugin_bundle_config.cpp
core/config/: monitor.cfg
core/include/: device_node.h  event_json_parser.h  flat_json_parser.h  hiview_platform.h  plugin_bundle.h
core/param_update/: BUILD.gn
core/platform_config/: BUILD.gn  hiview_platform_config  hiview_platform_config.cpp  hiview_platform_config.h
core/test/: BUILD.gn
hiretrieval/frameworks/: BUILD.gn  libhiretrieval.map
plugins/: BUILD.gn  adft_plugin_config  libdft.map
plugins/crash_validator/: BUILD.gn  crash_validator.cpp  crash_validator.h
plugins/event_store/: BUILD.gn  sys_event_store.cpp
plugins/event_validator/: BUILD.gn  event_delayed_util.cpp  event_param_watcher.cpp  event_period_info_util.cpp  event_validator.cpp  event_verify_util.cpp
plugins/eventlogger/: BUILD.gn  active_key_event.cpp  event_focus_listener.cpp  event_logger.cpp  event_logger_util.cpp  eventlogger.map
plugins/eventservice/: BUILD.gn  event_json_parser.cpp  flat_json_parser.cpp  sys_event_service.cpp
plugins/faultlogger/: BUILD.gn
plugins/freeze_detector/: BUILD.gn  db_helper.cpp  db_helper.h  freeze_common.cpp  freeze_common.h  freeze_detector_plugin.cpp  freeze_detector_plugin.h  freeze_manager.cpp  freeze_manager.h  get_ratio_utils.cpp  get_ratio_utils.h  hisysevent.yaml  plugin.cpp  plugin.h  resolver.cpp  resolver.h  rule_cluster.cpp  rule_cluster.h  vendor.cpp  vendor.h  watch_point.cpp  watch_point.h
plugins/hicollie_collector/: BUILD.gn  plugin.cpp  plugin.h
plugins/performance/: BUILD.gn  EvtParser.h  IMonitor.h  IMonitorRegistry.h  JlogId.h  XperfEvt.h  XperfPlugin.cpp  XperfPlugin.h  hisysevent.yaml
plugins/plugin_build/: BUILD.gn  adft_plugin_config  bdfr_plugin_config  libdfr.map  libdft.map
plugins/plugins_so/: BUILD.gn
plugins/privacy_controller/: BUILD.gn  privacy_controller.cpp
plugins/sys_dispatcher/: BUILD.gn  sys_dispatcher.cpp
plugins/sysevent_source/: BUILD.gn  event_json_parser.cpp  event_server.cpp  monitor_config.cpp  platform_monitor.cpp  sys_event_stat.cpp  sysevent_source.cpp
plugins/unified_collector/: BUILD.gn  unified_collector.cpp
plugins/usage_event_report/: BUILD.gn  usage_event_report.cpp
test/: BUILD.gn
test/resource/: ohos_test.xml
test/resource_L2/: ohos_test.xml
utility/analysis_faultlog/: BUILD.gn  analysis_faultlog.cpp
(+2237 files in other folders)
