# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("hiview_core_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "include",
    "param_update/include",
    "$hiview_root/include",
  ]
  cflags_cc = [ "-D__HIVIEW_OHOS__" ]
}

ohos_source_set("hiview_core") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  part_name = "hiview"
  public_configs = [ ":hiview_core_config" ]

  sources = [
    "event_json_parser.cpp",
    "hiview_platform.cpp",
    "plugin_bundle.cpp",
    "plugin_config.cpp",
  ]

  deps = [
    "$hiview_adapter/plugins/eventservice/service:sys_event_service_adapter",
    "$hiview_base:hiviewbase",
    "param_update:hiview_param_update",
    "platform_config:hiviewplatform_config",
  ]

  external_deps = [
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_single",
  ]
}

group("unittest") {
  testonly = true
  deps = []
}

group("moduletest") {
  testonly = true
  deps = []
}
