# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

# all the plugin test with the name of hiview will be executed in daily pipeline
# module_output_path = "hiview/hiview/plugins"
group("unittest") {
  testonly = true
  deps = [
    "sysevent_source:unittest",
    "unified_collector:unittest",
  ]
}

group("moduletest") {
  testonly = true
  deps = []
  deps += [ "faultlogger:moduletest" ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    "faultlogger:fuzztest",
    "sysevent_source:fuzztest",
  ]
}
