# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("event_export_mgr_config") {
  visibility = [ "*:*" ]

  include_dirs = [ "include" ]
}

ohos_source_set("event_export_mgr_source") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [ ":event_export_mgr_config" ]

  configs = [ ":event_export_mgr_config" ]

  sources = [ "setting_observer_manager.cpp" ]

  deps = [
    "$hiview_adapter/plugins/eventservice/service:sys_event_service_adapter",
    "$hiview_base:hiviewbase",
    "$hiview_base/event_export/config:event_export_config_source",
    "$hiview_base/event_export/seq_db:event_export_db_mgr_source",
    "$hiview_base/utility:hiview_utility",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:dataobs_manager",
    "cJSON:cjson",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_core",
    "relational_store:native_rdb",
  ]

  part_name = "hiview"

  subsystem_name = "hiviewdfx"
}
