# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("hiview_event_publish_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "$hiview_base/include",
    "include",
  ]
}

ohos_source_set("hiview_event_publish") {
  sources = [ "event_publish.cpp" ]

  public_configs = [ ":hiview_event_publish_config" ]

  external_deps = [ "bundle_framework:appexecfwk_core" ]

  deps = [
    "$hiview_base:hiview_base",
    "$hiview_base:logger",
    "//third_party/jsoncpp:jsoncpp",
  ]

  part_name = "hiview"
  subsystem_name = "hiviewdfx"
}
