# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("hiview_event_report_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "cache/include",
    "event/include",
    "factory/include",
    "include",
  ]
}

ohos_source_set("hiview_event_report") {
  sources = [
    "cache/hiview_event_cacher.cpp",
    "event/logger_event.cpp",
    "event/param_value.cpp",
    "event/plugin_event.cpp",
    "event/plugin_fault_event.cpp",
    "event/plugin_stats_event.cpp",
    "factory/plugin_fault_event_factory.cpp",
    "factory/plugin_load_event_factory.cpp",
    "factory/plugin_stats_event_factory.cpp",
    "factory/plugin_unload_event_factory.cpp",
    "hiview_event_report.cpp",
  ]

  public_configs = [ ":hiview_event_report_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
  ]

  deps = [ "//third_party/jsoncpp:jsoncpp" ]
}
